fix(form): required mark misalignment

--- a/projects/angular/src/forms/styles/_form.clarity.scss
+++ b/projects/angular/src/forms/styles/_form.clarity.scss
@@ -19,7 +19,8 @@
       @include css-var(color, clr-forms-invalid-color, $clr-forms-invalid-color, $clr-use-custom-properties);
       @include css-var(fill, clr-forms-invalid-color, $clr-forms-invalid-color, $clr-use-custom-properties);
       font-size: $clr-p3-font-size;
-      padding-right: $clr_baselineRem_0_25;
+      position: absolute;
+      translate: -9px;
     }
   }
 }
